Sat Apr  8 01:22:47 CEST 2006 (tk)
----------------------------------
  * libclamav: code cleanup: move repeated endian conversion and other (MAX,
	       MIN, etc.) macros into others.h. Patch by Andrey J. Melnikoff

Fri Apr  7 21:09:25 CEST 2006 (tk)
----------------------------------
  * libclamav: initial support for Sensory Networks' NodalCore Accelerator
  * clamscan: new option --hwaccel (only available on systems with hardware
	      accelerators)

Fri Apr  7 12:25:20 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:		Better handling of messages with lots of
  					consecutive blank lines

Fri Apr  7 11:13:29 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c: Fix error path error leaks.
		Patch from Andrey J. Melnikoff.

Thu Apr  6 19:39:36 CEST 2006 (tk)
----------------------------------
  * libclamav/zziplib/zzip-zip.c: add missing #include "others.h"
	Patch by Alex Deiter <tiamat*komi.mts.ru>
	Note: It may be required for proper zip scanning on 64-bit platforms

Wed Apr  5 09:06:48 BST 2006 (trog)
-----------------------------------
  * libclamav/others.c: fix possible crash in cli_bitset_test()

Wed Apr  5 01:13:22 CEST 2006 (tk)
----------------------------------
  * libclamav/scanners.c: don't return type values in cli_scanraw()
			  Spotted by Alch <alch*users.sourceforge.net>

Wed Apr  5 00:52:12 CEST 2006 (tk)
----------------------------------
  * libclamav/pe.c: fix possible integer overflow reported by Damian Put
		    Note: only exploitable if file size limit
		    (ArchiveMaxFileSize) disabled

Wed Apr  5 00:38:15 CEST 2006 (tk)
----------------------------------
  * libclamav/zziplib: fix possible crash on FreeBSD
		       Reported by Robert Rebbun <robert*desertsurf.com>

Wed Mar 29 15:45:03 CEST 2006 (tk)
----------------------------------
  * libclamav/scanners.c: properly report archive unpacking errors
			  Problem spotted by David F. Skoll
			  <dfs*roaringpenguin.com>
