@@ -1,3 +1,7 @@
+Sun Apr  9 10:35:15 BST 2006 (njh)
+----------------------------------
+  * libclamav/mbox.c:	Fix compilation error on CYGWIN
+
 Sat Apr  8 01:22:47 CEST 2006 (tk)
 ----------------------------------
   * libclamav: code cleanup: move repeated endian conversion and other (MAX,
